Make Jumbotron legible; small spacing fixes

--- a/frontend/src/Base.css
+++ b/frontend/src/Base.css
@@ -4,10 +4,8 @@
   border-color: #177e89;
 }
 body {
-  /* background-image: url(https://lh3.googleusercontent.com/_tcY7QLx6X_8/UY1_bXEw_dI/AAAAAAAACGI/cED5J49RVlc/w500-h125-p/03-chevron-hand.jpg); */
   background-color: #084c61;
 }
-
 a {
   color: #dfdce3;
   font-weight: 600;
@@ -34,12 +32,25 @@ a {
 h2 {
   text-align: center;
 }
+.imgBackground {
+  margin-top: 15px;
+  position: relative;
+  height: 450px;
+  background-color: white;
+  border-radius: 25px;
+}
 .Title {
-  /* font-family: 'Monofett', cursive; */
   font-size: 90px;
   -webkit-text-fill-color: #084c61;
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: #323232;
+}
+.header {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
 }
 
 .Home {
@@ -51,17 +62,30 @@ h2 {
   font-weight: 500;
   font-size: 25px;
   border-radius: 25px;
+  height: 100%;
+  opacity: 0.5;
+}
+.Cover {
+  padding-top: 80px;
+}
+.titleForm {
+  margin-bottom: 5px;
 }
 .RegistrationLogin {
+  margin-top: 30px;
+  margin-bottom: 30px;
   background-color: #177e89;
   display: inline-block;
   width: 50%;
   color: #dfdce3;
   border: 3px;
   border-radius: 25px;
-  border-color: #084c61;
+  border-style: solid;
+  border-color: #323031;
 }
 .BookList {
+  margin-top: 30px;
+  margin-bottom: 30px;
   background-color: #323031;
   padding: 25px;
   display: inline-block;
@@ -71,6 +95,8 @@ h2 {
   border-color: #084c61;
 }
 .bookInfo {
+  margin-top: 30px;
+  margin-bottom: 30px;
   background-color: #177e89;
   border-color: #db3a34;
   border-style: solid;
@@ -85,6 +111,8 @@ h2 {
 }
 
 .userBooks {
+  margin-top: 30px;
+  margin-bottom: 30px;
   background-color: #323031;
   padding: 25px;
   display: inline-block;
@@ -98,12 +126,17 @@ h2 {
 }
 .fa-book {
   color: #db3a34;
+  margin-top: 5px;
   margin-right: 5px;
 }
 .userShelf {
+  margin-bottom: 30px;
   color: #177e89;
 }
 .userList {
+  margin-top: 30px;
+  padding-top: 5px;
+  /* margin-bottom: 30px; */
   background-color: #ffc857;
   width: 50%;
   border-radius: 25px;
@@ -131,6 +164,7 @@ p {
   -webkit-text-fill-color: #084c61;
   -webkit-text-stroke-width: 0.25px;
   -webkit-text-stroke-color: #323031;
+  padding-top: 15px;
 }
 .updateFormBtn {
   background-color: #084c61;
@@ -169,6 +203,8 @@ p {
   color: #323031;
 }
 .BookForm {
+  margin-top: 30px;
+  margin-bottom: 30px;
   width: 75%;
   background-color: #177e89;
   border-style: solid;
